kubernetes/apps/kube-system/cilium/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: kube-system
  annotations:
    external-dns.alpha.kubernetes.io/hostname: hubble.cloud.witl.xyz
spec:
  parentRefs:
    - name: istio
      namespace: istio-ingress
      sectionName: https
  hostnames:
    - hubble.cloud.witl.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hubble-ui
          port: 80
